[package]
name = "samba-rs"
description = "A pure rust implementation of the samba protocol"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[[bench]]
name = "netbios"
harness = false

[dependencies]
bitflags = "2.10"
criterion = "0.8"
derive_more = { version = "2.1", features = ["from"] }
thiserror = "2.0"
